--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Recipes App</title>
+    <title>Yo` Recipes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
